--- a/res/layout/bullsel.xml
+++ b/res/layout/bullsel.xml
@@ -28,8 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
-            android:layout_below="@+id/textView17"
-            android:layout_marginTop="99dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true" android:layout_below="@+id/textView17"/>
 </RelativeLayout>
