--- a/res/layout/bullpicked.xml
+++ b/res/layout/bullpicked.xml
@@ -10,12 +10,6 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Calf Test"
-                android:id="@+id/textView16" android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="Jumbo id:"
                 android:id="@+id/textView22"
                 android:layout_above="@+id/textView24" android:layout_alignLeft="@+id/textView24"
@@ -25,8 +19,8 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView23"
-                android:layout_below="@+id/textView28" android:layout_alignLeft="@+id/textView16"
-                android:layout_alignStart="@+id/textView16"/>
+                android:layout_below="@+id/textView28" android:layout_alignLeft="@+id/textView40"
+                android:layout_alignStart="@+id/textView40"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -72,7 +66,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ReplaceStar"
+                android:text="ReplaceStar:"
                 android:id="@+id/textView31"
                 android:layout_below="@+id/textView30" android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
@@ -86,78 +80,80 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="replaceStar"
+                android:text="replaceStar:"
                 android:id="@+id/textView33"
-                android:layout_below="@+id/ratingBar2" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_above="@+id/textView32" android:layout_alignRight="@+id/textView26"
+                android:layout_alignEnd="@+id/textView26"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView34"
-                android:layout_below="@+id/textView31" android:layout_alignLeft="@+id/ratingBar2"
+                android:layout_below="@+id/ratingBar2" android:layout_alignLeft="@+id/ratingBar2"
                 android:layout_alignStart="@+id/ratingBar2"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DAM"
                 android:id="@+id/textView28"
-                android:layout_below="@+id/textView16" android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SIRE"
                 android:id="@+id/textView32"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="25dp"
                 android:layout_below="@+id/textView34" android:layout_alignLeft="@+id/textView28"
                 android:layout_alignStart="@+id/textView28"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rank"
-                android:id="@+id/textView35" android:layout_below="@+id/textView32"
-                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+                android:text="Rank:"
+                android:id="@+id/textView35"
+                android:layout_alignTop="@+id/textView40" android:layout_alignRight="@+id/textView44"
+                android:layout_alignEnd="@+id/textView44"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Code"
+                android:text="Code:"
                 android:id="@+id/textView36"
-                android:layout_below="@+id/textView35" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_below="@+id/textView35" android:layout_alignRight="@+id/textView39"
+                android:layout_alignEnd="@+id/textView39"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="Name:"
                 android:id="@+id/textView37"
-                android:layout_below="@+id/textView36" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_below="@+id/textView36" android:layout_alignRight="@+id/textView38"
+                android:layout_alignEnd="@+id/textView38"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Breed"
+                android:text="Breed:"
                 android:id="@+id/textView38"
-                android:layout_below="@+id/textView37" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_below="@+id/textView37" android:layout_alignRight="@+id/textView39"
+                android:layout_alignEnd="@+id/textView39"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stars Within"
-                android:id="@+id/textView39" android:layout_below="@+id/textView38"
-                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+                android:text="Stars Within:"
+                android:id="@+id/textView39"
+                android:layout_below="@+id/textView38" android:layout_alignRight="@+id/textView44"
+                android:layout_alignEnd="@+id/textView44"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView40"
-                android:layout_above="@+id/textView36" android:layout_alignLeft="@+id/textView42"
-                android:layout_alignStart="@+id/textView42"/>
+                android:layout_below="@+id/textView32" android:layout_alignLeft="@+id/textView41"
+                android:layout_alignStart="@+id/textView41"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView41"
-                android:layout_below="@+id/textView40" android:layout_alignLeft="@+id/textView40"
-                android:layout_alignStart="@+id/textView40"/>
+                android:layout_below="@+id/textView40" android:layout_alignLeft="@+id/textView42"
+                android:layout_alignStart="@+id/textView42"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -170,12 +166,13 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView43"
-                android:layout_below="@+id/textView42" android:layout_alignLeft="@+id/ratingBar4"
+                android:layout_below="@+id/textView42"
+                android:layout_alignLeft="@+id/ratingBar4"
                 android:layout_alignStart="@+id/ratingBar4"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stars Across"
+                android:text="Stars Across:"
                 android:id="@+id/textView44"
                 android:layout_below="@+id/textView39"
                 android:layout_alignParentLeft="true"
@@ -185,14 +182,72 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar3"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_above="@+id/ratingBar4" android:layout_alignLeft="@+id/ratingBar4"
+                android:layout_above="@+id/ratingBar4"
+                android:layout_alignLeft="@+id/ratingBar4"
                 android:layout_alignStart="@+id/ratingBar4"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar4"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_alignTop="@+id/textView44" android:layout_alignLeft="@+id/textView32"
-                android:layout_alignStart="@+id/textView32"/>
+                android:layout_alignTop="@+id/textView44" android:layout_centerHorizontal="true"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:id="@+id/button6"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/textView32" android:layout_toStartOf="@+id/textView32"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mate"
+                android:id="@+id/button7"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/button6"
+                android:layout_toEndOf="@+id/textView32"
+                android:layout_toRightOf="@+id/textView32"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CALF"
+                android:id="@+id/textView16"
+                android:layout_below="@+id/textView44" android:layout_alignRight="@+id/textView32"
+                android:layout_alignEnd="@+id/textView32" android:layout_marginTop="36dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Star Rating:"
+                android:id="@+id/textView45"
+                android:layout_alignBottom="@+id/ratingBar5" android:layout_alignRight="@+id/textView46"
+                android:layout_alignEnd="@+id/textView46"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stars Across:"
+                android:id="@+id/textView46" android:layout_below="@+id/textView45"
+                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar5"
+                android:layout_below="@+id/textView16"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_alignLeft="@+id/ratingBar4"
+                android:layout_alignStart="@+id/ratingBar4"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar6"
+                android:layout_below="@+id/ratingBar5"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_alignLeft="@+id/ratingBar5"
+                android:layout_alignStart="@+id/ratingBar5"/>
     </RelativeLayout>
 </LinearLayout>
