Date picker working fully implementing fragments returning date

--- a/res/layout/bullpicked.xml
+++ b/res/layout/bullpicked.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" android:weightSum="1">
+              android:layout_height="match_parent"
+              android:weightSum="1">
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -13,84 +14,96 @@
                 android:layout_height="wrap_content"
                 android:text="Jumbo id:"
                 android:id="@+id/textView22"
-                android:layout_above="@+id/textView24" android:layout_alignLeft="@+id/textView24"
+                android:layout_above="@+id/textView24"
+                android:layout_alignLeft="@+id/textView24"
                 android:layout_alignStart="@+id/textView24"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView23"
-                android:layout_below="@+id/textView28" android:layout_alignLeft="@+id/textView40"
+                android:layout_below="@+id/textView28"
+                android:layout_alignLeft="@+id/textView40"
                 android:layout_alignStart="@+id/textView40"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Animal id:"
                 android:id="@+id/textView24"
-                android:layout_below="@+id/textView23" android:layout_alignRight="@+id/textView30"
+                android:layout_below="@+id/textView23"
+                android:layout_alignRight="@+id/textView30"
                 android:layout_alignEnd="@+id/textView30"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView25"
-                android:layout_above="@+id/textView26" android:layout_alignLeft="@+id/textView23"
+                android:layout_above="@+id/textView26"
+                android:layout_alignLeft="@+id/textView23"
                 android:layout_alignStart="@+id/textView23"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sex:"
                 android:id="@+id/textView26"
-                android:layout_below="@+id/textView24" android:layout_alignRight="@+id/textView30"
+                android:layout_below="@+id/textView24"
+                android:layout_alignRight="@+id/textView30"
                 android:layout_alignEnd="@+id/textView30"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView27"
-                android:layout_alignTop="@+id/textView26" android:layout_alignLeft="@+id/textView25"
+                android:layout_alignTop="@+id/textView26"
+                android:layout_alignLeft="@+id/textView25"
                 android:layout_alignStart="@+id/textView25"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView29"
-                android:layout_below="@+id/textView27" android:layout_alignLeft="@+id/textView27"
+                android:layout_below="@+id/textView27"
+                android:layout_alignLeft="@+id/textView27"
                 android:layout_alignStart="@+id/textView27"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dam id;"
                 android:id="@+id/textView30"
-                android:layout_below="@+id/textView26" android:layout_alignRight="@+id/textView31"
+                android:layout_below="@+id/textView26"
+                android:layout_alignRight="@+id/textView31"
                 android:layout_alignEnd="@+id/textView31"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ReplaceStar:"
                 android:id="@+id/textView31"
-                android:layout_below="@+id/textView30" android:layout_alignParentLeft="true"
+                android:layout_below="@+id/textView30"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar2"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_below="@+id/textView29" android:layout_alignLeft="@+id/textView29"
+                android:layout_below="@+id/textView29"
+                android:layout_alignLeft="@+id/textView29"
                 android:layout_alignStart="@+id/textView29"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="replaceStar:"
                 android:id="@+id/textView33"
-                android:layout_above="@+id/textView32" android:layout_alignRight="@+id/textView26"
+                android:layout_above="@+id/textView32"
+                android:layout_alignRight="@+id/textView26"
                 android:layout_alignEnd="@+id/textView26"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView34"
-                android:layout_below="@+id/ratingBar2" android:layout_alignLeft="@+id/ratingBar2"
+                android:layout_below="@+id/ratingBar2"
+                android:layout_alignLeft="@+id/ratingBar2"
                 android:layout_alignStart="@+id/ratingBar2"/>
         <TextView
                 android:layout_width="wrap_content"
@@ -104,63 +117,72 @@
                 android:text="SIRE"
                 android:id="@+id/textView32"
                 android:layout_marginTop="25dp"
-                android:layout_below="@+id/textView34" android:layout_alignLeft="@+id/textView28"
+                android:layout_below="@+id/textView34"
+                android:layout_alignLeft="@+id/textView28"
                 android:layout_alignStart="@+id/textView28"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rank:"
                 android:id="@+id/textView35"
-                android:layout_alignTop="@+id/textView40" android:layout_alignRight="@+id/textView44"
+                android:layout_alignTop="@+id/textView40"
+                android:layout_alignRight="@+id/textView44"
                 android:layout_alignEnd="@+id/textView44"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Code:"
                 android:id="@+id/textView36"
-                android:layout_below="@+id/textView35" android:layout_alignRight="@+id/textView39"
+                android:layout_below="@+id/textView35"
+                android:layout_alignRight="@+id/textView39"
                 android:layout_alignEnd="@+id/textView39"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name:"
                 android:id="@+id/textView37"
-                android:layout_below="@+id/textView36" android:layout_alignRight="@+id/textView38"
+                android:layout_below="@+id/textView36"
+                android:layout_alignRight="@+id/textView38"
                 android:layout_alignEnd="@+id/textView38"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Breed:"
                 android:id="@+id/textView38"
-                android:layout_below="@+id/textView37" android:layout_alignRight="@+id/textView39"
+                android:layout_below="@+id/textView37"
+                android:layout_alignRight="@+id/textView39"
                 android:layout_alignEnd="@+id/textView39"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Stars Within:"
                 android:id="@+id/textView39"
-                android:layout_below="@+id/textView38" android:layout_alignRight="@+id/textView44"
+                android:layout_below="@+id/textView38"
+                android:layout_alignRight="@+id/textView44"
                 android:layout_alignEnd="@+id/textView44"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView40"
-                android:layout_below="@+id/textView32" android:layout_alignLeft="@+id/textView41"
+                android:layout_below="@+id/textView32"
+                android:layout_alignLeft="@+id/textView41"
                 android:layout_alignStart="@+id/textView41"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView41"
-                android:layout_below="@+id/textView40" android:layout_alignLeft="@+id/textView42"
+                android:layout_below="@+id/textView40"
+                android:layout_alignLeft="@+id/textView42"
                 android:layout_alignStart="@+id/textView42"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView42"
-                android:layout_below="@+id/textView41" android:layout_alignLeft="@+id/textView43"
+                android:layout_below="@+id/textView41"
+                android:layout_alignLeft="@+id/textView43"
                 android:layout_alignStart="@+id/textView43"/>
         <TextView
                 android:layout_width="wrap_content"
@@ -191,7 +213,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar4"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_alignTop="@+id/textView44" android:layout_centerHorizontal="true"/>
+                android:layout_alignTop="@+id/textView44"
+                android:layout_centerHorizontal="true"/>
         <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
@@ -201,7 +224,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_toLeftOf="@+id/textView32" android:layout_toStartOf="@+id/textView32"/>
+                android:layout_toLeftOf="@+id/textView32"
+                android:layout_toStartOf="@+id/textView32"/>
         <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
@@ -220,21 +244,26 @@
                 android:layout_height="wrap_content"
                 android:text="CALF"
                 android:id="@+id/textView16"
-                android:layout_below="@+id/textView44" android:layout_alignRight="@+id/textView32"
-                android:layout_alignEnd="@+id/textView32" android:layout_marginTop="36dp"/>
+                android:layout_below="@+id/textView44"
+                android:layout_alignRight="@+id/textView32"
+                android:layout_alignEnd="@+id/textView32"
+                android:layout_marginTop="36dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Star Rating:"
                 android:id="@+id/textView45"
-                android:layout_alignBottom="@+id/ratingBar5" android:layout_alignRight="@+id/textView46"
+                android:layout_alignBottom="@+id/ratingBar5"
+                android:layout_alignRight="@+id/textView46"
                 android:layout_alignEnd="@+id/textView46"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Stars Across:"
-                android:id="@+id/textView46" android:layout_below="@+id/textView45"
-                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+                android:id="@+id/textView46"
+                android:layout_below="@+id/textView45"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -257,13 +286,23 @@
                 android:layout_height="wrap_content"
                 android:text="Set Date"
                 android:id="@+id/button10"
-                android:layout_above="@+id/button6" android:layout_alignLeft="@+id/ratingBar6"
-                android:layout_alignStart="@+id/ratingBar6"/>
-        <DatePicker
+                android:onClick="SetDate"
+                android:layout_below="@+id/textView45" android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
-                android:layout_below="@+id/textView31" android:layout_alignLeft="@+id/textView33"
-                android:layout_alignStart="@+id/textView33"/>
+                android:text="Date:"
+                android:id="@+id/textView48" android:layout_below="@+id/textView46"
+                android:layout_alignLeft="@+id/textView39" android:layout_alignStart="@+id/textView39"
+                android:layout_alignRight="@+id/textView46"
+                android:layout_alignEnd="@+id/textView46"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/textView49"
+                android:layout_below="@+id/ratingBar6"
+                android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 </LinearLayout>
