--- a/res/layout/datedialog.xml
+++ b/res/layout/datedialog.xml
@@ -4,4 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/datePicker2"
+                android:layout_below="@+id/textView31" android:layout_alignLeft="@+id/textView33"
+                android:layout_alignStart="@+id/textView33"/>
 </LinearLayout>
