--- a/res/layout/viewbulllist.xml
+++ b/res/layout/viewbulllist.xml
@@ -45,7 +45,9 @@
             android:text="Refine"
             android:onClick="Refine"
             android:id="@+id/button5"
-            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
+            android:layout_marginBottom="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -90,19 +92,4 @@
             android:id="@+id/radioButton5"
             android:layout_alignBottom="@+id/spinner5" android:layout_toRightOf="@+id/spinner5"
             android:layout_toEndOf="@+id/spinner5" android:checked="false"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Search by Code"
-            android:id="@+id/textView51" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_above="@+id/button5"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/editBull"
-            android:layout_alignBottom="@+id/textView51"
-            android:layout_alignLeft="@+id/button5"
-            android:layout_alignStart="@+id/button5"
-            android:text="Type must be selected"/>
 </RelativeLayout>
